Modernize SDD showcase: TDD doctrine, review agents, loop-driven development
Governance and harness overhaul, plus the code fixes it surfaced.

Doctrine
- tdd.definition.md (new, authority 7): RED -> GREEN -> REFACTOR, the RED
  evidence rule, behaviour-preserving-refactor exception, unexpectedly-green REDs
- loop.playbook.md (new, authority 10): outer loop, DoD exit conditions,
  max-iterations and no-progress hard stops, model routing
- execution.playbook.md: 3.4 restructured into RED/GREEN/REFACTOR, new 3.5
  Review & Document phase, "Junie Response Contract" -> Agent Output Contract
- CLAUDE.md is now the canonical 17-entry authority order; file-usage.definition.md
  drops its divergent copy and gains the .claude/ executable layer
- Single-sourced the ADR-trigger list (sdd.playbook.md 6) and the quality-gate
  list (test.definition.md 7); three and two divergent copies respectively
- architecture.definition.md 11: Registered Bounded Contexts, so context
  boundaries are a checkable fact
- modelling.definition.md: identity rule scoped by ownership (ADR 0005)
- test.definition.md 1.3: no test may create a file-based database

Agents and skills
- .claude/agents/ddd-hex-reviewer.md (opus, read-only): PASS/DRIFT with file:line
- .claude/agents/spec-documenter.md (fable, docs only, no Bash)
- .claude/skills/loop-uc/SKILL.md: /loop-uc <UCnn>
- .claude/settings.json checked in for reproducibility

ADRs
- 0004 generic DomainEventPublisher signature (retroactive; a bypassed gate)
- 0005 bounded context identity boundaries
- 0006 Java 25 LTS baseline, Temurin vendor pinned

Specs
- All UC specs normalized to the template with AC-NN ids and a section 10
  Definition of Done; uc03/08/09 filenames corrected from "cancle"
- uc10 split into uc11 CompleteTour and uc12 CancelTourByGuide, which were
  genuinely unspecified: without uc11 nothing publishes TourCompleted, so uc07
  had no trigger
- New: aggregate-guide-tour, guide-tour-repository.outport, start-tour.inport;
  tour-bo